# bjoernchess

./: BjörnChess.cabal  cabal.project
bjoern-core/: björn-core.cabal
bjoern-core/src/Bjorn/: Core.hs
bjoern-core/src/Bjorn/Core/: IO.hs  Moves.hs  Pieces.hs  PosRepr.hs  Position.hs
bjoern-core/src/Björn/: Core.hs
bjoern-core/src/Björn/Core/: IO.hs  Moves.hs  Pieces.hs  PosRepr.hs  Position.hs
bjoern-core/test/: Test.hs
bjoern-core/test/Core/: IO.hs  Position.hs
bjoernchess/: björnchess.cabal
bjoernchess/src/: Main.hs
bjoernchess/src/Bjorn/CLI/GUI/: ColoredGrid.hs
bjoernchess/src/Björn/CLI/GUI/: ColoredGrid.hs  RenderBoard.hs
bjorn-core/: bjorn-core.cabal
bjorn-core/src/Bjorn/: Core.hs
bjorn-core/src/Bjorn/Core/: ApplyMove.hs  IO.hs  MoveGen.hs  Moves.hs  Pieces.hs  PosRepr.hs  Position.hs  Utils.hs
bjorn-core/test/: Test.hs
bjorn-core/test/Core/: IO.hs  Position.hs
bjornchess/: bjornchess.cabal
bjornchess/src/: Main.hs
bjornchess/src/Bjorn/CLI/GUI/: RenderBoard.hs
björn-core/: björn-core.cabal
björn-core/src/Björn/Core/: IO.hs  Pieces.hs  Position.hs
björn-core/test/: Test.hs
björn-core/test/Core/: IO.hs
björnchess/: björnchess.cabal
björnchess/src/: Main.hs
björnchess/src/Björn/CLI/Render/: ColoredGrid.hs  Position.hs
src/Björn/: IO.hs  Pieces.hs  Position.hs
src/Utils/: Maybe2.hs
