cabal-version:       >=1.10

name:                BjörnChess
version:             0.1.0.0
author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple


executable BjörnChess
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:
    Björn.IO
    Björn.Pieces
    Björn.Position

  build-depends:       base >= 4.14 && < 4.15,
                       mtl >= 2.2.2,
                       parsec >= 3.1.15
  default-language:    Haskell2010
