cabal-version:       2.0

name:                björn-core
version:             0.1.0
author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:
    Björn.Core.IO
    Björn.Core.Pieces
    Björn.Core.Position

  build-depends:       base >= 4.14 && < 4.15,
                       mtl >= 2.2.2,
                       parsec >= 3.1.15
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      test
  other-modules:
    Core.IO
    Core.Position

  build-depends:       björn-core,
                       base >= 4.14 && < 4.15,
                       HUnit >= 1.6.2.0
  default-language:    Haskell2010