cabal-version:       2.0

name:                björnchess
version:             0.1.0
author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple


executable björnchess
  main-is:             Main.hs
  other-modules:
  hs-source-dirs:      src

  build-depends:       base >= 4.14 && < 4.15,
                       björn-core >= 0.1.0
  default-language:    Haskell2010