cabal-version:       2.0

name:                björnchess
version:             0.1.0
author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple


executable björnchess
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:
    Björn.CLI.Render.ColoredGrid
    Björn.CLI.Render.Position

  build-depends:       björn-core >= 0.1.0,
                       base >= 4.14 && < 4.15,
                       ansi-terminal >= 0.11.1
  default-language:    Haskell2010